fix: header icon alignment

--- a/src/layout/nav/AppHeader.less
+++ b/src/layout/nav/AppHeader.less
@@ -72,6 +72,17 @@
 
       // Fix background overlapping border
       border-bottom: 1px solid @kw-border-color-darker;
+
+      @media (max-width: @screen-md) {
+        .anticon {
+          // For some reason, the button slightly overflows the header and
+          // leaves a gap at the top. This is a silly patch for that to make the
+          // whole region clickable again.
+          // FIXME: This is a hack.
+          position: relative;
+          top: -2px;
+        }
+      }
     }
   }
 
@@ -173,8 +184,18 @@
       padding: 0;
 
       .anticon {
+        line-height: @layout-header-height;
         padding: 0 20px;
         margin-right: 0;
+
+        @media (max-width: @screen-md) {
+          // For some reason, the button slightly overflows the header and
+          // leaves a gap at the top. This is a silly patch for that to make the
+          // whole region clickable again.
+          // FIXME: This is a hack.
+          position: relative;
+          top: -2px;
+        }
       }
     }
   }
